# SignageMetro

./: .dockerignore  .gitignore  CURSOR_PROMPT.md  Dockerfile  PROJECT_SPEC.md  README.md  hello.py  pyproject.toml
.github/workflows/: deploy-pages.yml
app/: __init__.py  export.py  main.py  models.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  store.ts  styles.css  types.ts
frontend/src/components/: Header.tsx  MobileWarningModal.tsx  PropertiesPanel.tsx  SettingsPanel.tsx  Sidebar.tsx  SignageCanvas.tsx
